--- a/View/Pages/DodajPracownikaPage.xaml
+++ b/View/Pages/DodajPracownikaPage.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:components="clr-namespace:Bank2.Components"
       xmlns:local="clr-namespace:Bank2.View.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -109,16 +110,19 @@
         <Label x:Name="LabelWynagrodzenie" Content="Wynagrodzenie" Grid.Column="2" Grid.Row="3"/>
 
 
-        <TextBox x:Name="textBoxImie" Grid.Column="1" Grid.Row="1"  TextWrapping="Wrap"   />
-        <TextBox x:Name="textBoxNazwisko" Grid.Column="1" Grid.Row="2"   TextWrapping="Wrap"     />
-        <PasswordBox x:Name="PasswordBoxHaslo" Grid.Column="1" Grid.Row="3"      />
+        <TextBox x:Name="textBoxImie" Text="{Binding Imie, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"  TextWrapping="Wrap"   />
+        <TextBox x:Name="textBoxNazwisko" Text="{Binding Nazwisko, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"   TextWrapping="Wrap"     />
+      <components:BindablePasswordBox Grid.Column="1" Grid.Row="3" Password="{Binding Password, Mode=TwoWay}" />
+        
+      
+      
 
-        <TextBox x:Name="textBoxPESEL" Grid.Column="3" Grid.Row="1" TextWrapping="Wrap"   Grid.ColumnSpan="2" />
-        <TextBox x:Name="textBoxTelefon" Grid.Column="3" Grid.Row="2" TextWrapping="Wrap"    Grid.ColumnSpan="2"  />
-        <TextBox x:Name="textBoxWynagrodzenie" Grid.Column="3" Grid.Row="3"  TextWrapping="Wrap" Grid.ColumnSpan="2"   />
+        <TextBox x:Name="textBoxPESEL" Text="{Binding Pesel, Mode=TwoWay}" Grid.Column="3" Grid.Row="1" TextWrapping="Wrap"   Grid.ColumnSpan="2" />
+        <TextBox x:Name="textBoxTelefon" Text="{Binding Telefon, Mode=TwoWay}" Grid.Column="3" Grid.Row="2" TextWrapping="Wrap"    Grid.ColumnSpan="2"  />
+        <TextBox x:Name="textBoxWynagrodzenie" Text="{Binding Wynagrodzenie, Mode=TwoWay}" Grid.Column="3" Grid.Row="3"  TextWrapping="Wrap" Grid.ColumnSpan="2"   />
 
-        <Button x:Name="dodaj" Content="dodaj" Grid.Column="2" Grid.Row="5"  HorizontalAlignment="Center" />
-        <Button x:Name="anuluj" Content="anuluj" Grid.Column="3" Grid.Row="5"  HorizontalAlignment="Center" />
+        <Button x:Name="dodaj" Content="Dodaj" Command="{Binding Dodaj}" Grid.Column="2" Grid.Row="5"  HorizontalAlignment="Center" />
+        <Button x:Name="anuluj" Content="Anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="5"  HorizontalAlignment="Center" />
 
     </Grid>
 </Page>
