--- a/View/Pages/LogowaniePage.xaml
+++ b/View/Pages/LogowaniePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Bank2.View.Pages.LogowaniePage"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,16 +6,19 @@
       xmlns:local="clr-namespace:Bank2.View.Pages"
       xmlns:vm="clr-namespace:Bank2.ViewModel"
       xmlns:nav="clr-namespace:Bank2.Navigators"
+      
+      xmlns:Bank2="clr-namespace:Bank2" x:Class="Bank2.View.Pages.LogowaniePage"
+      
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LogowaniePage"
     
       >
-    
+
     <Page.Resources>
-    
+        
         <!--<vm:VMLogowanie x:Key="VMLogowanie"/>-->
-        <Style TargetType="Button" >
+        <Style TargetType="{x:Type Button}" >
 
             <Setter Property="FontSize" Value="20"/>
 
@@ -26,34 +29,35 @@
 
         </Style>
 
-        <Style TargetType="Label" >
+        <Style TargetType="{x:Type Label}" >
             <Setter Property="Width" Value="100" />
             <Setter Property="Height" Value="40" />
             <Setter Property="HorizontalAlignment" Value="Center"/>
 
             <Setter Property="FontSize" Value="20"/>
         </Style>
-        <Style TargetType="TextBox">
+        <Style TargetType="{x:Type TextBox}">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Height" Value="25"/>
 
         </Style>
-        <Style TargetType="PasswordBox">
+        <Style TargetType="{x:Type PasswordBox}">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Height" Value="25"/>
 
         </Style>
 
     </Page.Resources>
-    
+   
     <Viewbox OpacityMask="Black" VerticalAlignment="Top" HorizontalAlignment="Center"   >
 
 
+       
 
 
+        <Grid>
+            <!--DataContext="{StaticResource VMLogowanie}">-->
 
-        <Grid><!--DataContext="{StaticResource VMLogowanie}">-->
-          
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10"/>
                 <ColumnDefinition Width="130"/>
@@ -72,18 +76,21 @@
                 <RowDefinition MinHeight="20"/>
             </Grid.RowDefinitions>
 
-            
+           
 
             <Label x:Name="LabelTytul" Content="Logowanie do SKOK-u Olsena" Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="4" VerticalAlignment="Bottom" Width="400" HorizontalContentAlignment="Center" FontWeight="Bold" HorizontalAlignment="Center" TextBlock.TextAlignment="Center"/>
             <Label x:Name="LabelImie" Content="Imię" Grid.Row="2"  Grid.Column="1"  HorizontalAlignment="Left"  VerticalAlignment="Center" />
             <Label x:Name="LabelNazwisko" Content="Nazwisko" Grid.Row="3"  Grid.Column="1"  HorizontalAlignment="Left"  VerticalAlignment="Center" />
             <Label x:Name="LabelHaslo" Content="Hasło" Grid.Row="4"  Grid.Column="1"  HorizontalAlignment="Left" VerticalAlignment="Center" />
-            <TextBox x:Name="textBoxImie" Text="{Binding Path=Imie}" Grid.Row="2"  Grid.Column="2"  HorizontalAlignment="Left"   TextWrapping="Wrap"  VerticalAlignment="Center" Width="120" />
-            <TextBox x:Name="textBoxNazwisko" Text="{Binding Path=Nazwisko }" Grid.Row="3"  Grid.Column="2"  HorizontalAlignment="Left"   TextWrapping="Wrap"  VerticalAlignment="Center" Width="120"  />
+            <TextBox x:Name="textBoxImie" Text="{Binding Imie}" Grid.Row="2"  Grid.Column="2"  HorizontalAlignment="Left"   TextWrapping="Wrap"  VerticalAlignment="Center" Width="120" />
+            <TextBox x:Name="textBoxNazwisko" Text="{Binding Nazwisko}" Grid.Row="3"  Grid.Column="2"  HorizontalAlignment="Left"   TextWrapping="Wrap"  VerticalAlignment="Center" Width="120"  />
             <PasswordBox x:Name="PasswordBox"  Grid.Row="4"  Grid.Column="2"  HorizontalAlignment="Left"     VerticalAlignment="Center" Width="120"  />
             <Button x:Name="Zarejestruj" Command="{Binding Zarejestruj}"  Grid.Row="6"  Grid.Column="1"  Content="Zarejestruj" HorizontalAlignment="left"  VerticalAlignment="Center" Width="100"   />
             <Button x:Name="Zaloguj" Command="{Binding Zaloguj}" Grid.Row="6"  Grid.Column="3"  Content="Zaloguj" HorizontalAlignment="right"  VerticalAlignment="Center" Width="100"  Click="OnClickZaloguj" />
-            <Image Grid.Row="2"  Grid.Column="3" Grid.RowSpan="3" HorizontalAlignment="Center" Source="/images.jpg" />
+            <Image Grid.Row="2"  Grid.Column="3" Grid.RowSpan="3" HorizontalAlignment="Center" Source="/image.jpg" />
+
+
+
 
 
         </Grid>
