--- a/View/Pages/DodajPracownikaPage.xaml
+++ b/View/Pages/DodajPracownikaPage.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:components="clr-namespace:Bank2.Components"
-      xmlns:local="clr-namespace:Bank2.View.Pages" xmlns:viewmodel="clr-namespace:Bank2.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:VMDodajPracownika}"
+      xmlns:local="clr-namespace:Bank2.View.Pages" xmlns:viewmodel="clr-namespace:Bank2.ViewModel" 
+      d:DataContext="{d:DesignInstance Type=viewmodel:VMDodajPracownika}"
 
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
