--- a/View/Pages/PracownikPracownicyPage.xaml
+++ b/View/Pages/PracownikPracownicyPage.xaml
@@ -8,7 +8,8 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PracownikPracownicyPage">
 
-    <Grid>
-        <Button>4</Button>
-    </Grid>
+
+
+
+    <Button Content="pracv"/>
 </Page>
