--- a/View/Windows/DodajKredytWindow.xaml
+++ b/View/Windows/DodajKredytWindow.xaml
@@ -103,112 +103,17 @@
         <Label x:Name="DodawanieKredytu" Content="Dodawanie kredytu" Width="300" Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalContentAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" />
 
         <Label x:Name="KwotaKredytu" Content="Kwota kredytu" Grid.Column="0" Grid.Row="1" Width="200"/>
-        <TextBox x:Name="textBoxKwotaKredytu"  Grid.Column="1" Grid.Row="1"  Width="200" Margin="0,10,10,0" HorizontalAlignment="Left"/>
+        <TextBox Text="{Binding Kwota, Mode=TwoWay}" x:Name="textBoxKwotaKredytu"  Grid.Column="1" Grid.Row="1"  Width="200" Margin="0,10,10,0" HorizontalAlignment="Left"/>
         <Label Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
 
 
-        <DataGrid  Name="dataGridKlienci" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"  Height=" 200" Width="800"   >
-
-            <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell">
-                    <Style.Triggers>
-                        <Trigger Property="IsSelected" Value="True"  >
-
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                        <GradientStop Color="DodgerBlue" Offset="1"/>
-                                        <GradientStop Color="White" Offset="0"/>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="Foreground" Value="Black" />
-                            <Setter Property="BorderThickness" Value="0" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </DataGrid.CellStyle>
-            <DataGrid.Columns >
-
-                <DataGridTextColumn Header="ID"  MinWidth="20" MaxWidth="50" Width="25*" Binding="{Binding Id_klienta }" />
-                <DataGridTextColumn Header="Imię"  MinWidth="75"  Width="75*" Binding="{Binding Imię}" />
-                <DataGridTextColumn Header="Nazwisko"  MinWidth="75"  Width="75*" Binding="{Binding Nazwisko}"/>
-                <DataGridTextColumn Header="Telefon"  MinWidth="75"  Width="75*" Binding="{Binding Telefon}"/>
-                <DataGridTextColumn Header="Miasto"  MinWidth="75"  Width="75*" Binding="{Binding Miasto}"/>
-                <DataGridTextColumn Header="Ulica"  MinWidth="75"  Width="75*" Binding="{Binding Ulica}"/>
-
-
-                <DataGridTemplateColumn Header="x" Width="75">
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <CheckBox x:Name="all" Content="All"  IsChecked="{Binding IsChecked}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <CheckBox Tag="checkbox" IsChecked="{Binding zaznaczony, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-
+         <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"/>
+     
         <Label Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="5" Width="300" HorizontalAlignment="Left" Content="Wybierz rodzaj kredytu"/>
-
-        <DataGrid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"  Name="dataGridRodzajeKredytow" Height=" 200" Width="800"  HorizontalAlignment="Stretch" >
-
-            <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell">
-                    <Style.Triggers>
-                        <Trigger Property="IsSelected" Value="True"  >
-
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                        <GradientStop Color="DodgerBlue" Offset="1"/>
-                                        <GradientStop Color="White" Offset="0"/>
-                                    </LinearGradientBrush>
-                                </Setter.Value>
-                            </Setter>
-                            <Setter Property="Foreground" Value="Black" />
-                            <Setter Property="BorderThickness" Value="0" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </DataGrid.CellStyle>
-            <DataGrid.Columns>
-
-                <DataGridTextColumn Header="Id"  MinWidth="20" MaxWidth="50" Width="25*" Binding="{Binding Id_rodzaju_kredytu}" />
-
-                <DataGridTextColumn Header="Nazwa"  MinWidth="75"   Binding="{Binding Nazwa}"/>
-                <DataGridTextColumn Header="Oprocentowanie"  MinWidth="75"   Binding="{Binding Oprocentowanie}"/>
-                <DataGridTextColumn Header="Prowizja"  MinWidth="75"   Binding="{Binding Prowizja}"/>
-                <DataGridTextColumn Header="Okres (w mies.)"  MinWidth="75"  Binding="{Binding                         Okres_kredytowania_w_mies__}"/>
-
-                <DataGridTextColumn Header="Kredyt utworzył"  MinWidth="75"   Binding="{Binding Kredyt_utworzył}"/>
-                <DataGridTemplateColumn Header="x" Width="75">
-                    <DataGridTemplateColumn.HeaderTemplate>
-                        <DataTemplate>
-                            <CheckBox x:Name="all" Content="All" IsChecked="{Binding IsChecked}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.HeaderTemplate>
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <CheckBox Tag="checkbox" IsChecked="{Binding zaznaczony, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-
-
-            </DataGrid.Columns>
-
-
-
-        </DataGrid>
-
-
-        <Button x:Name="dodaj" Content="dodaj" Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"  Margin="0,0,10,0" />
-        <Button x:Name="anuluj" Content="anuluj" Grid.Column="3" Grid.Row="2" Width="75" HorizontalAlignment="Left" Margin="0,0,20,0" />
+        <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"/>
+      
+        <Button x:Name="dodaj" Content="dodaj" Command="{Binding Dodaj}" Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"  Margin="0,0,10,0" />
+        <Button x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="2" Width="75" HorizontalAlignment="Left" Margin="0,0,20,0" />
 
     </Grid>
 
