--- a/Components/LokatyTabela/LokataItem.xaml
+++ b/Components/LokatyTabela/LokataItem.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bank2.Components.KredytItem"
+﻿<UserControl x:Class="Bank2.Components.LokataItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,14 +7,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
-        <TextBlock Text="{Binding Id_Kredytu}"/>
-        <TextBlock Text="{Binding KlientImie }"/>
+        <CheckBox IsChecked="{Binding IsSelected}"/>
+        <TextBlock Text="{Binding Id_Lokaty}"/>
+        <TextBlock Text="{Binding KlientImie}"/>
         <TextBlock Text="{Binding KlientNazwisko}"/>
-        <TextBlock Text="{Binding Rodzaj_kredytu}"/>
-        <TextBlock Text="{Binding Kwota_kredytu }"/>
-        <TextBlock Text="{Binding Oprocentowanie }"/>
+        <TextBlock Text="{Binding Rodzaj_lokaty }"/>
+
+        <TextBlock Text="{Binding Kwota_lokaty}"/>
+        <TextBlock Text="{Binding ImiePracownika}"/>
+        <TextBlock Text="{Binding NazwiskoPracownika}"/>
         <TextBlock Text="{Binding Data_założenia}"/>
-        <TextBlock Text="{Binding ImiePracownika }"/>
-        <TextBlock Text="{Binding NazwiskoPracownika }"/>
+        <TextBlock Text="{Binding Oprocentowanie}"/>
     </StackPanel>
+    
 </UserControl>
