--- a/Components/PracownicyTabela/PracownikItemNaglowek.xaml
+++ b/Components/PracownicyTabela/PracownikItemNaglowek.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bank2.Components.PrzelewItem"
+﻿<UserControl x:Class="Bank2.Components.PracownikItemNaglowek"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,13 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
-        <TextBlock Text="{Binding Id_Przelewu}"/>
-        <TextBlock Text="{Binding NadawcaImię}"/>
-        <TextBlock Text="{Binding NadawcaNazwisko}"/>
-        <TextBlock Text="{Binding Nazwa_odbiorcy}"/>
-        <TextBlock Text="{Binding Tytuł_przelewu}"/>
-        <TextBlock Text="{Binding Kwota}"/>
-        <TextBlock Text="{Binding Data}"/>
-        <TextBlock Text="{Binding Numer_rachunku_odbiorcy}"/>
+        <TextBlock Text=" checkbox"  />
+        <TextBlock Text=" Id"  />
+        <TextBlock Text=" Imię" />
+        <TextBlock Text=" Nazwisko"  />
+        <TextBlock Text=" Data zatrudnienia" />
+        <TextBlock Text=" PESEL" />
+    
     </StackPanel>
 </UserControl>
