--- a/Components/PrzelewyTabela/PrzelewItem.xaml
+++ b/Components/PrzelewyTabela/PrzelewItem.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bank2.Components.RodzajKredytuItem"
+﻿<UserControl x:Class="Bank2.Components.PrzelewItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,13 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
-        <TextBlock Text="{Binding Id_rodzaju_Kredytu}"/>
-        <TextBlock Text="{Binding Nazwa }"/>
-        <TextBlock Text="{Binding Oprocentowanie}"/>
-        <TextBlock Text="{Binding Okres_kredytowania_w_mies}"/>
-        <TextBlock Text="{Binding Prowizja }"/>
-        <TextBlock Text="{Binding UtworzylImie }"/>
-        <TextBlock Text="{Binding UtworzylNazwisko}"/>
-        
+        <CheckBox IsChecked="{Binding IsSelected}"/>
+        <TextBlock Text="{Binding Id_Przelewu}"/>
+        <TextBlock Text="{Binding NadawcaImię}"/>
+        <TextBlock Text="{Binding NadawcaNazwisko}"/>
+        <TextBlock Text="{Binding Nazwa_odbiorcy}"/>
+        <TextBlock Text="{Binding Tytuł_przelewu}"/>
+        <TextBlock Text="{Binding Kwota}"/>
+        <TextBlock Text="{Binding Data}"/>
+        <TextBlock Text="{Binding Numer_rachunku_odbiorcy}"/>
     </StackPanel>
 </UserControl>
