--- a/Components/RodzajeKredytowTabela/RodzajKredytuItem.xaml
+++ b/Components/RodzajeKredytowTabela/RodzajKredytuItem.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bank2.Components.LokataItem"
+﻿<UserControl x:Class="Bank2.Components.RodzajKredytuItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,16 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
-        <TextBlock Text="{Binding Id_Lokaty}"/>
-        <TextBlock Text="{Binding KlientImie}"/>
-        <TextBlock Text="{Binding KlientNazwisko}"/>
-        <TextBlock Text="{Binding Rodzaj_lokaty }"/>
-
-        <TextBlock Text="{Binding Kwota_lokaty}"/>
-        <TextBlock Text="{Binding ImiePracownika}"/>
-        <TextBlock Text="{Binding NazwiskoPracownika}"/>
-        <TextBlock Text="{Binding Data_założenia}"/>
+        <CheckBox IsChecked="{Binding IsSelected}"/>
+        <TextBlock Text="{Binding Id_rodzaju_Kredytu}"/>
+        <TextBlock Text="{Binding Nazwa }"/>
         <TextBlock Text="{Binding Oprocentowanie}"/>
+        <TextBlock Text="{Binding Okres_kredytowania_w_mies}"/>
+        <TextBlock Text="{Binding Prowizja }"/>
+        <TextBlock Text="{Binding UtworzylImie }"/>
+        <TextBlock Text="{Binding UtworzylNazwisko}"/>
+        
     </StackPanel>
-    
 </UserControl>
