--- a/Components/RodzajeKredytowTabela/RodzajKredytuNaglowek.xaml
+++ b/Components/RodzajeKredytowTabela/RodzajKredytuNaglowek.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bank2.Components.RodzajLokatyItem"
+﻿<UserControl x:Class="Bank2.Components.RodzajKredytuNaglowek"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,13 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
-        <TextBlock Text="{Binding Id_rodzaju_Lokaty}"/>
-        <TextBlock Text="{Binding Nazwa }"/>
-        <TextBlock Text="{Binding Oprocentowanie}"/>
-        <TextBlock Text="{Binding Okres_w_mies}"/>
-        <TextBlock Text="{Binding Prowizja }"/>
-        <TextBlock Text="{Binding UtworzylImie }"/>
-        <TextBlock Text="{Binding UtworzylNazwisko}"/>
+  
+        <TextBlock Text="Id"/>
+        <TextBlock Text="Nazwa"/>
+        <TextBlock Text="Oprocentowanie"/>
+        <TextBlock Text="Okres w mies"/>
+        <TextBlock Text="Prowizja"/>
+        <TextBlock Text="Utworzyl"/>
+        <TextBlock Text="Utworzyl"/>
 
     </StackPanel>
 </UserControl>
