--- a/View/Windows/DodajKlientaWindow.xaml
+++ b/View/Windows/DodajKlientaWindow.xaml
@@ -36,6 +36,16 @@
 
             <Setter Property="FontSize" Value="20"/>
         </Style>
+
+        <Style x:Key="textBoxInError" TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip" 
+                            Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                        Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
 
     <Grid >
@@ -66,9 +76,19 @@
         <Label x:Name="LabelTelefon" Content="Telefon" Grid.Column="2" Grid.Row="1"/>
         <Label x:Name="LabelMiasto" Content="Miasto" Grid.Column="2" Grid.Row="2"/>
         <Label x:Name="LabelUlica" Content="Ulica" Grid.Column="2" Grid.Row="3"/>
+        <TextBox Grid.Column="1" Grid.Row="1"  Style="{StaticResource textBoxInError}">
+            <TextBox.Text>
+                <Binding  Path="Imie" Mode="TwoWay" ValidatesOnDataErrors="True" NotifyOnValidationError="True"></Binding>
+                
+            </TextBox.Text> 
 
 
-        <TextBox Text="{Binding Imie, Mode=TwoWay}" x:Name="textBoxImie" Grid.Column="1" Grid.Row="1"   TextWrapping="Wrap"  Width="120"  />
+
+
+
+        </TextBox>
+
+        <!--<TextBox Text="{Binding Imie, Mode=TwoWay, ValidatesOnDataErrors=True, NotifyOnValidationError=True }" x:Name="textBoxImie"   TextWrapping="Wrap"  Width="120"/>-->
         <TextBox Text="{Binding Nazwisko, Mode=TwoWay}" x:Name="textBoxNazwisko" Grid.Column="1" Grid.Row="2"  TextWrapping="Wrap"   Width="120"  />
         
         <components:BindablePasswordBox Password="{Binding Password, Mode=TwoWay}" Grid.Column="1" Grid.Row="3"   Width="120"/>
