--- a/View/Windows/DodajLokateWindow.xaml
+++ b/View/Windows/DodajLokateWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bank2.View.Windows"
         mc:Ignorable="d"
+        xmlns:components="clr-namespace:Bank2.Components"
         Title="DodajLokateWindow" Name="Nameokno_DodajKredyt"   MinHeight="400" MaxHeight="900" Width="800"  
     >
     <Window.Resources>
@@ -105,10 +106,11 @@
         <Label Content="Kwota lokaty" Grid.Column="0" Grid.Row="1" Width="200"/>
         <TextBox Text="{Binding Kwota, Mode=TwoWay}"  Grid.Column="1" Grid.Row="1"  Width="200" Margin="0,10,10,0" HorizontalAlignment="Left"/>
         <Label Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
-
+        
         <UserControl Content="{Binding TablicaDanych, Mode=TwoWay}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"/>
 
         <Label Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="5" Width="300" HorizontalAlignment="Left" Content="Wybierz rodzaj kredytu"/>
+        
         <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"/>
 
         <Button Content="dodaj" Command="{Binding Dodaj}" Grid.Column="2" Grid.Row="2" Width="75" HorizontalAlignment="Right"  Margin="0,0,10,0" />
