--- a/View/Windows/EdytujLokateWindow.xaml
+++ b/View/Windows/EdytujLokateWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bank2.View.Windows"
+     xmlns:components="clr-namespace:Bank2.Components"
         mc:Ignorable="d"
          Title="oknoEdytujLokate" Name="NameoknoEdytujLokate" Height="auto" MinHeight="400" Width="800"  
       >
@@ -106,9 +107,11 @@
 
 
         <Label Content="Wybierz Klienta" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="5"  Width="800" />
+     
         <UserControl Content="{Binding TablicaDanych, Mode=TwoWay, NotifyOnTargetUpdated=True}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="5"/>
 
         <Label Content="Wybierz lokatę" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="5"  Width="800" />
+       
         <UserControl Content="{Binding TablicaDanych2, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"/>
 
         <Button x:Name="edytuj" Command="{Binding Edytuj}" Content="Edytuj" Grid.Column="2" Grid.Row="1" Width="75" HorizontalAlignment="Right" Margin="0,0,20,0" />
