--- a/View/Windows/ZrobPrzelewWindow.xaml
+++ b/View/Windows/ZrobPrzelewWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bank2.View.Windows"
+        xmlns:components="clr-namespace:Bank2.Components"
         mc:Ignorable="d"
           Title="oknoDodajPrzelew" Name="NameOknoDodajPrzelew" Height="auto" MinHeight="400" Width="800"  >
     <Window.Resources>
@@ -118,7 +119,7 @@
         <Button x:Name="anuluj" Content="anuluj" Command="{Binding Anuluj}" Grid.Column="3" Grid.Row="4"  HorizontalAlignment="Center"  Margin="0,0,10,0"/>
 
         <Label Content="Wybierz klienta"  Width="300"  Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2"  HorizontalAlignment="Left"/>
-
+       
         <UserControl Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="6" Content="{Binding TablicaDanych, Mode=TwoWay}" />
 
 
